--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,15 @@ name: Starter Workflow Demo
 on: [pull_request]
   
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+ 
   build:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: demo workflow job step 1
-        run: echo This is a demo start workflow
-      - name: demo workflow job Step 2
-        run: echo This is Demo 2
-            
-        
+    needs: build
+      steps:
+        - uses: actions/checkout@v3
+        - name: demo workflow job step 1
+          run: echo This is a demo start workflow
+        - name: demo workflow job Step 2
+          run: echo This is Demo 2
