--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Starter Workflow Demo
-on: [pull_request]
+on: [pull_request, push]
   
 jobs:
   setup:
@@ -7,10 +7,11 @@ jobs:
  
   build:
     runs-on: ubuntu-latest
-    needs: build
-      steps:
-        - uses: actions/checkout@v3
-        - name: demo workflow job step 1
-          run: echo This is a demo start workflow
-        - name: demo workflow job Step 2
-          run: echo This is Demo 2
+    needs: setup
+    
+    steps: 
+      - uses: actions/checkout@v3
+      - name: demo workflow job step 1
+        run: echo This is a demo start workflow
+      - name: demo workflow job Step 2
+        run: echo This is Demo 2
