--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,17 @@
 name: Starter Workflow Demo
-on: [pull_request]
+on: [pull_request, push]
+  
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+ 
   build:
     runs-on: ubuntu-latest
-    steps:
+    needs: setup
+    
+    steps: 
       - uses: actions/checkout@v3
-      - name: demo workflow job
+      - name: demo workflow job step 1
         run: echo This is a demo start workflow
-        
+      - name: demo workflow job Step 2
+        run: echo This is Demo 2
