--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,11 @@
 name: Starter Workflow Demo
-on: [pull_request, push]
+on: 
+  pull_request:
+    branches:
+      - '*'
+  push:
+    branches:
+      - 'master'
   
 jobs:
   setup:
@@ -7,13 +13,13 @@ jobs:
     steps: 
     - uses: actions/checkout@v3
     - name: demo workflow job step 1
-      run: echo This is a demo start workflow 1
+      run: echo Demo tests setup
  
-  build:
+  Unit-tests:
     runs-on: ubuntu-latest
     needs: setup
     
     steps: 
     - uses: actions/checkout@v3
     - name: demo workflow job Step 2
-      run: echo This is Demo 2
+      run: echo Demo unit tests
