--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,6 @@ jobs:
     steps: 
     - uses: actions/checkout@v3
     - name: demo workflow job Step 2
-      runs: echo Demo unit tests
+      run: echo This is a fail step
+    - name: Install Mocha
+      run: npm install mocha
