--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
     - name: demo workflow job Step 2
       run: echo This is a fail step
     - name: Install Mocha
-      run: npm install mocha
+      run: npm install mocah
