KAN-1: Update README.md (#8)
* KAN-1: Update README.md

* Update main.yml

fail test

* Update main.yml

again

* Update main.yml

* Update main.yml

* Update README.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,6 @@ jobs:
     steps: 
     - uses: actions/checkout@v3
     - name: demo workflow job Step 2
-      run: echo Demo unit tests
+      run: echo This is a fail step
+    - name: Install Mocha
+      run: npm install mocha && echo successfully Installed !!
